[package]
name = "ode_solvers"
version = "0.3.8"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "Numerical methods to solve ordinary differential equations (ODEs) in Rust."
edition = "2018"

documentation = "https://docs.rs/ode_solvers/"
homepage = "https://srenevey.github.io/ode-solvers/"
repository = "https://github.com/srenevey/ode-solvers"
readme = "README.md"

keywords = ["ode", "math", "solver", "equations"]
categories = ["science"]

license = "BSD-3-Clause"

[dependencies]
nalgebra = "0.32.3"
num-traits = "0.2.17"
simba = "0.8.1"
thiserror = "1.0.50"
