[package]
name = "ode_solvers"
version = "0.6.1"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "Numerical methods to solve ordinary differential equations (ODEs) in Rust."
edition = "2021"

documentation = "https://docs.rs/ode_solvers/"
homepage = "https://srenevey.github.io/ode-solvers/"
repository = "https://github.com/srenevey/ode-solvers"
readme = "README.md"

keywords = ["ode", "math", "solver", "equations"]
categories = ["science"]

license = "Apache-2.0"

[dependencies]
nalgebra = "0.33.2"
num-traits = "0.2.19"
simba = "0.9.0"
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"